fixed unnecessary scrollbars

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ html{
 	height: 100%;
 }
 body{
+	box-sizing: border-box;
 	margin:10px auto;
 	max-width:800px;
 	font-size: 1.1em;
